--- a/imperium style.css
+++ b/imperium style.css
@@ -1904,6 +1904,10 @@ body {
         left: 170px;
     }
 
+    .header__button {
+            margin-right: 0px;
+    }
+
     .content-first__column-first--zogolovok {
         font-size: 20px;
         font-weight: 600;
